[package]
name = "tz-rs"
version = "0.6.8"
edition = "2018"
authors = ["x-hgg-x"]
repository = "https://github.com/x-hgg-x/tz-rs"
description = "A pure Rust reimplementation of libc functions localtime, gmtime and mktime."
license = "MIT/Apache-2.0"
keywords = ["date", "time", "timezone", "zone", "calendar"]
categories = ["date-and-time", "parser-implementations"]
readme = "README.md"

[lib]
name = "tz"

[dependencies]
const_fn = "0.4"

[features]
default = ["const"]
const = []
