[package]
name = "tz-rs"
version = "0.6.11"
edition = "2018"
authors = ["x-hgg-x"]
repository = "https://github.com/x-hgg-x/tz-rs"
description = "A pure Rust reimplementation of libc functions localtime, gmtime and mktime."
license = "MIT OR Apache-2.0"
keywords = ["date", "time", "timezone", "zone", "calendar"]
categories = ["date-and-time", "parser-implementations"]
readme = "README.md"

[lib]
name = "tz"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
const_fn = { version = "0.4.4", optional = true }

[features]
default = ["std", "const"]
std = ["alloc"]
alloc = []
const = ["const_fn"]
